add readme, update steps config